Tokenizer utility structs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(Compiler)
 
+add_library(Utils
+		tokenizer.h
+		tokenizer.c
+		)
+
 add_executable(main main.c)
+target_link_libraries(main PUBLIC Utils)
